--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,12 +5,27 @@
   <div class="form-group--input">
     <input
       type="text"
-      id="fullName"
-      formControlName="fullName"
+      id="firstName"
+      formControlName="firstName"
       placeholder="Name"
     />
-    <label for="fullName">
-      Nombre Completo
+    <label for="firstName">
+      Nombre
+      <img
+        src="../../assets/icons/images/user.png"
+        alt="email input reference"
+      />
+    </label>
+  </div>
+  <div class="form-group--input">
+    <input
+      type="text"
+      id="lastName"
+      formControlName="lastName"
+      placeholder="Name"
+    />
+    <label for="lastName">
+      Apellido
       <img
         src="../../assets/icons/images/user.png"
         alt="email input reference"
