--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,40 @@
 <section class="home-seccion">
   <ol *ngFor="let event of allFetchedEvents">
-    <li>
-      <div>
-        {{ event.name }}
-      </div>
-      <div>
-        {{ event.type }}
-      </div>
-      <div>
-        {{ event.capacity }}
-      </div>
-      <div>
-        {{ event.description }}
-      </div>
-    </li>
+    <a
+      [routerLink]="['/single-event', event.id]"
+      routerLinkActive="active"
+      ariaCurrentWhenActive="page"
+    >
+      <li class="home-event__name">
+        <div>
+          <h6>Nombre:</h6>
+          <span>
+            {{ event.name }}
+          </span>
+        </div>
+      </li>
+      <li class="home-event__type">
+        <div>
+          <h6>Tipo:</h6>
+          <span class="ellipsis">{{ event.type }}</span>
+        </div>
+      </li>
+      <li class="home-event__capacity">
+        <div>
+          <h6>Capacidad:</h6>
+          <span>
+            {{ event.capacity }}
+          </span>
+        </div>
+      </li>
+      <li class="home-event__description">
+        <div>
+          <h6>Descripción:</h6>
+          <span class="multi-line-ellipsis">
+            {{ event.description }}
+          </span>
+        </div>
+      </li>
+    </a>
   </ol>
 </section>
