--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,11 @@
 <nav class="nav-main">
   <header>
-    <img
-      src="../../assets/icons/images/eventMasterIcon.png"
-      alt="Event master icon"
-    />
+    <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
+      <img
+        src="../../assets/icons/images/eventMasterIcon.png"
+        alt="Event master icon"
+      />
+    </a>
   </header>
   <article>
     <ol *ngIf="showNavigation">
