--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,22 +1,18 @@
 .home-seccion {
   background-color: var(--main-color);
 
-  width: 100vw;
-  height: 100dvh;
+  width: 90vw;
+  min-height: 100dvh;
 
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 20px;
 
   margin-inline: 50px;
 
-  & ol {
-    padding: 10px;
-
-    width: 240px;
-    height: 260px !important;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
+  & a {
+    text-decoration: none !important;
 
     display: grid;
     grid-template-areas:
@@ -24,9 +20,26 @@
       "type capacity"
       "description description";
 
-    & .home-event__name {
-      grid-area: name;
+    width: 100%;
+    height: 100%;
+  }
+
+  & ol {
+    transition: 0.2s;
+
+    padding: 10px;
+
+    width: 240px;
+    height: 240px !important;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+
+    box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.2);
+
+    &:hover {
+      transform: translateY(-2.5px);
     }
+
     & .home-event__type {
       grid-area: type;
     }
@@ -38,9 +51,14 @@
     }
 
     & li {
+      margin: 10px;
       & > div {
         display: flex;
         flex-direction: column;
+
+        & h6, & span {
+          font-size: 14px;
+        }
       }
     }
   }
