--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,16 +1,34 @@
 .nav-main {
   background-color: white;
 
-
-  position: fixed;
-  z-index: 10;
-  top: 0;
-  left: 0;
-
   width: 100%;
   height: 50px;
 
-  & img {
-    width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  & header {
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+
+    & img {
+      width: 80px;
+    }
+  }
+
+  & article {
+    position: relative;
+    z-index: 10;
+
+    margin-left: 120px;
+    margin-top: 10px;
+    & ol {
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+    }
   }
 }
