--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,54 @@
   --app-error-border: rgba(255, 0, 0, 0.5);
 }
 
+.forms {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  padding: 20px;
+
+  width: 80vw;
+  max-width: 350px;
+  min-width: 250px;
+
+  & .form-group--input {
+    display: flex;
+    flex-direction: column-reverse;
+
+    & label {
+      margin-bottom: 5px;
+
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: left;
+      align-items: center;
+      gap: 5px;
+
+      & img {
+        width: 15px;
+      }
+    }
+
+    & input {
+      margin-bottom: 10px;
+    }
+  }
+
+  & button {
+    margin: 20px 0px 0px 0px;
+  }
+
+  & .form-group__register {
+    text-align: center;
+  }
+}
+
 .ellipsis {
   white-space: nowrap;
   overflow: hidden;
@@ -19,7 +67,9 @@
   -webkit-line-clamp: 3; /* Number of lines to show */
   overflow: hidden;
   text-overflow: ellipsis;
-  max-height: calc(1.5em * 3); /* Adjust based on line-height (line-height * number of lines) */
+  max-height: calc(
+    1.5em * 3
+  ); /* Adjust based on line-height (line-height * number of lines) */
   line-height: 1.5em; /* Adjust the line-height */
 }
 
@@ -27,6 +77,10 @@ html {
   & * {
     font-family: sans-serif;
   }
+}
+
+html, body {
+  overflow-x: hidden;
 }
 
 label {
@@ -64,6 +118,11 @@ input {
   }
 }
 
+textarea {
+  resize: none;
+  height: 70px;
+}
+
 button {
   border: 1px solid var(--app-main-color);
   background-color: var(--app-main-color);
@@ -84,6 +143,10 @@ button {
 
     background-color: var(--main-color);
     border: 1px solid var(--main-color);
+  }
+
+  &:disabled {
+    opacity: 0.7;
   }
 }
 
@@ -125,4 +188,3 @@ h6 {
   background-color: var(--app-error-background);
   border: 1px solid var(--app-error-border);
 }
-
