--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,7 +14,7 @@
           routerLink="/home"
           routerLinkActive="active"
           ariaCurrentWhenActive="page"
-          >Home</a
+          ><h3>Home</h3></a
         >
       </li>
       <li>
@@ -22,7 +22,7 @@
           routerLink="/create-event"
           routerLinkActive="active"
           ariaCurrentWhenActive="page"
-          >Crear Evento</a
+          ><h3>Crear Evento</h3></a
         >
       </li>
     </ol>
