--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,6 +25,11 @@
           ><h3>Crear Evento</h3></a
         >
       </li>
+      <li>
+        <button (click)="alertConfirmation()" class="hover-link__button">
+          Cerrar Sesión
+        </button>
+      </li>
     </ol>
   </article>
 </nav>
