se agregan endpoints para actualizar evento, listar participantes de un evento, actualizar usuario, eliminar participante de un evento, añadir participante a un evento y se crea el componente para actualizar evento

--- a/src/app/single-event/single-event.component.html
+++ b/src/app/single-event/single-event.component.html
@@ -26,7 +26,7 @@
       <button (click)="deleteEvent()">Eliminar Evento</button>
     </li>
     <li>
-      <button >Actualizar Evento</button>
+      <button (click)="navigateToUpdateEvent()">Actualizar Evento</button>
     </li>
   </ol>
   <div *ngIf="isLoading">
