--- a/src/app/single-event/single-event.component.css
+++ b/src/app/single-event/single-event.component.css
@@ -16,7 +16,7 @@
   & ol {
     display: grid;
     grid-template-areas:
-      "event-name event-name event-name"
+      "event-name event-name event-owner"
       "event-capacity event-capacity event-type"
       "event-description event-description event-description";
 
@@ -40,6 +40,9 @@
 
     & .home-event__name {
       grid-area: event-name;
+    }
+    & .home-event__creator {
+      grid-area: event-owner;
     }
     & .home-event__capacity {
       grid-area: event-capacity;
