feat: add functionality to update user profile

--- a/src/app/single-user/single-user.component.html
+++ b/src/app/single-user/single-user.component.html
@@ -21,8 +21,8 @@
       </h6>
       <span>{{ userToShow.email }}</span>
     </li>
-    <li>
-      <button *ngIf="isCurrentUser">Actualizar perfil</button>
+    <li *ngIf="isCurrentUser">
+      <button (click)="navigateToUpdateUser()">Actualizar perfil</button>
     </li>
   </ol>
   <div *ngIf="isLoading">
